Registro Usuarios OK

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/proveedores.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/proveedores.html
@@ -43,7 +43,7 @@
                 <br>
                 <li><a href="{{ url_for('venta_historico') }}"><i class="fas fa-box"></i> ventasHistorico</a></li>
                 <br>
-                <li><a href="{{ url_for('registro') }}"><i class="fas fa-box"></i> Registro</a></li>
+                <li><a href="{{ url_for('usuarios') }}"><i class="fas fa-box"></i> Registro</a></li>
             </ul>
             
            
