--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
@@ -40,7 +40,7 @@
                 <br>
                 <li><a href="{{ url_for('venta_historico') }}"><i class="fas fa-box"></i> ventasHistorico</a></li>
                 <br>
-                <li><a href="{{ url_for('registro') }}"><i class="fas fa-box"></i> registro</a></li>
+                <li><a href="{{ url_for('usuarios') }}"><i class="fas fa-box"></i> registro</a></li>
             </ul>
             
            
