--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/ventaHistorico.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/ventaHistorico.html
@@ -1,3 +1,4 @@
+<!-- usuarios.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +7,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-NwF3tBdYF4JcJjU4pN3nI9an2P+iK8a/1qdzNm5/lf7dUq0HfdvpBfB5SvOzJ4tv" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Página con Menú</title>
-
 </head>
 <body>
     <div class="wrapper">
@@ -17,7 +18,7 @@
                     <img src="/static/images/logo.png" alt="Logo">
                 </div>
                 <br>
-
+                
                 <div class="user-icon">
                     <img src="/static/images/usuario-de-perfil.png" alt="User Icon">
                 </div>
@@ -47,33 +48,44 @@
         </div>
         <a href="{{ url_for('logout') }}" class="logout-link">
             <i class="fas fa-sign-out-alt"></i> Cerrar sesión
-        </a>
+        </a>       
           
-        <div class="content">
+        <div class="content d-flex flex-column " >
             <!-- Contenido principal -->
-            <h3>Ventas Historico</h3>
-            <div class="horizontal-bar">
-                <img src="/static/images/Eliminar.png" alt="Eliminar" class="icon"  onclick="openConfirmationModal()">
-                <input type="text" id="search-input" placeholder="Buscar...">
-            </div>
+            <h3>Ventas Historico</h3>     
+                <div class="horizontal-bar my-4 d-flex py-2 justify-content-end " >
+                    <img src="/static/images/Eliminar.png" alt="Eliminar" class="icon">
+                    <input type="text" id="search-input" placeholder="Buscar...">
+                </div>
+                
+                    <table class="table table-bordered">
+                        <thead>
+                            <th scope="col">Fecha_registro</th> 
+                            <th scope="col">Codigo</th>
+                            <th scope="col">Descripion</th> 
+                            <th scope="col">Categoria</th> 
+                            <th scope="col">Proveedor</th> 
+                            <th scope="col">Cantidad</th> 
+                            <th scope="col">Precio_unitario</th>
+                            <th scope="col">Total</th>
+                        </thead>
+                    
+                    <tbody >
+                        {% for d in data %}
+                            <tr>
+                                <td>{{d.fecha_registro}}</td>
+                                <td>{{d.codigo}}</td>
+                                <td>{{d.descripion}}</td>
+                                <td>{{d.categoria}}</td>
+                                <td>{{d.proveedor}}</td>
+                                <td>{{d.cantidad}}</td>
+                                <td>{{d.precio_unitario}}</td>
+                                <td>{{d.total}}</td>
+                                </tr>
+                        {% endfor %}
+                    </tbody>
+                    </table>
         </div>
-
- <!-- Ventana modal -->
- <div id="myModal" class="modalEliminacion">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal()">×</span>
-        <div class="modal-header-eliminacion">
-            <h2>Eliminar registro</h2>
-        </div>
-        <div class="modal-eliminacion">
-            <div class="confirmation-modal-body" id="confirmationModalBody">
-                <center><p>¿Estás seguro de que deseas eliminar este registro?</p></center>
-                <button class="btn-si" onclick="deleteRecord()">Sí</button>
-                <button class="btn-no" onclick="closeConfirmationModal()">No</button></center>
-            </div>
-        </div>
-    </div>
-</div>
 
 </div>
 
