--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
@@ -94,6 +94,7 @@
                                 <td>{{d.total_a_pagar}}</td>
                                 <td>{{d.fecha_registro}}</td>
                                 <td>{{d.observaciones}}</td>
+                                <td><a href="{{url_for('deleteVenta', id_venta=d.id_venta)}}" class="btn btn-danger btn-sm">Eliminar</a></td>
                             </tr>
                         {% endfor %}
                     </tbody>
