--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/proveedores.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/proveedores.html
@@ -6,11 +6,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-NwF3tBdYF4JcJjU4pN3nI9an2P+iK8a/1qdzNm5/lf7dUq0HfdvpBfB5SvOzJ4tv" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Página con Menú</title>
-    <style>
-        /* Estilos para la ventana modal */
-       
-    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -43,70 +40,129 @@
                 <br>
                 <li><a href="{{ url_for('venta_historico') }}"><i class="fas fa-box"></i> ventasHistorico</a></li>
                 <br>
-                <li><a href="{{ url_for('registro') }}"><i class="fas fa-box"></i> Registro</a></li>
+                <li><a href="{{ url_for('registro') }}"><i class="fas fa-box"></i> registro</a></li>
             </ul>
             
            
         </div>
         <a href="{{ url_for('logout') }}" class="logout-link">
             <i class="fas fa-sign-out-alt"></i> Cerrar sesión
-        </a>
-
-        <div class="content">
+        </a>       
+          
+        <div class="content d-flex flex-column " >
             <!-- Contenido principal -->
-            <h3>Proveedores</h3>
-            <div class="horizontal-bar">
-                <img src="/static/images/agregar.png" alt="agregar" class="icon" onclick="openModal()">
-                <img src="/static/images/editar.png" alt="Editar" class="icon" onclick="openModal2()">
-
-                <img src="/static/images/Eliminar.png" alt="Eliminar" class="icon">
-                <input type="text" id="search-input" placeholder="Buscar...">
-            </div>
+            <h3>Registro de Proveedor</h3>     
+                <div class="horizontal-bar my-4 d-flex py-2 justify-content-end " >
+                    <img src="/static/images/devolucion.png" alt="devolucion" class="icon" onclick="openModalDevolucion()">
+                    <img src="/static/images/agregar.png" alt="agregar" class="icon" onclick="openModal()">
+                    <img src="/static/images/editar.png" alt="Editar" class="icon" onclick="openModal2()">
+                    <img src="/static/images/Eliminar.png" alt="Eliminar" class="icon">
+                    <button type="button" class="lector">Lectura codigo de barras</button>
+                    <input type="text" id="search-input" placeholder="Buscar...">
+                </div>
+                
+                    <table class="table table-bordered">
+                        <thead>
+                            <th scope="col">Id Proveedor</th> 
+                            <th scope="col">Tipo Identificacion</th>
+                            <th scope="col">Numero Identificacion</th>
+                            <th scope="col">Razon Social</th> 
+                            <th scope="col">Email</th> 
+                            <th scope="col">Direccion</th> 
+                            <th scope="col">Telefono</th> 
+                            <th scope="col">Dia de Visita</th> 
+                            <th scope="col">Dia de Entrega</th> 
+                            <th scope="col" colspan="2">Acciones</th> 
+                        </thead>
+                    
+                    <tbody >
+                        {% for d in data %}
+                            <tr>
+                                <td>{{d.id_proveedor}}</td>
+                                <td>{{d.tipo_identificacion}}</td>
+                                <td>{{d.numero_identificacion}}</td>
+                                <td>{{d.razon_social}}</td>
+                                <td>{{d.email}}</td>
+                                <td>{{d.direccion}}</td>
+                                <td>{{d.telefono}}</td>
+                                <td>{{d.dia_de_visita}}</td>
+                                <td>{{d.dia_de_entrega}}</td>
+                               
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                    </table>
         </div>
 
-        <!-- Ventana modal -->
-<div id="myModal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal()">×</span>
-        <div class="modal-header">
+        <!-- Ventana modal agregar venta -->
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="closeModal()">×</span>
+                <form action="/guardarProveedores" id="proveedores_form" method="post" >
+                    <div class="modal-header">
             <h2>Crear  Proveedor</h2>
            
         </div>
         <div class="modal-body">
                 <div class="caja1">
                     <div class="form-group">
-                        <label for="venta_id">Proveedor ID:</label>
-                        <input type="text" id="proveedor_id" name="proveedor_id">
+                        <label for="id_proveedor">ID Proveedor:</label>
+                        <input type="text" id="id_proveedor" name="id_proveedor">
                     </div>
                     <div class="form-group">
-                        <label for="codigo">Tipo de Identificacion:</label>
-                        <select id="codigo" name="codigo">
+                        <label for="tipo_identificacion">Tipo de Identificacion:</label>
+                        <select type= "text" id="tipo_identificacion" name="tipo_identificacion">
                             <option value="cc">CC</option>
                             <option value="nit">NIT</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="descripcion">Identificacion:</label>
-                        <input type="text" id="Identificacion" name="Identificacion">
+                        <label for="numero_identificacion">Numero Identificacion:</label>
+                        <input type="text" id="numero_identificacion" name="numero_identificacion">
                     </div>
                     <div class="form-group">
-                        <label for="valor_unitario">Razon social:</label>
-                        <input type="text" id="Razon social" name="NombreRazon social">
+                        <label for="razon social">Razon social:</label>
+                        <input type="text" id="razon social" name="razon_social">
                     </div>
                     
                 </div>
                 <div class="caja1">
                     <div class="form-group">
-                        <label for="descuento">Direccion:</label>
-                        <input type="text" id="descuento" name="descuento">
+                        <label for="direccion">Direccion:</label>
+                        <input type="text" id="direccion" name="direccion">
                     </div>
                     <div class="form-group">
-                        <label for="medio_pago">Email:</label>
-                        <input type="text" id="Email" name="Email">
+                        <label for="email">Email:</label>
+                        <input type="text" id="email" name="email">
                     </div>
                     <div class="form-group">
-                        <label for="medio_pago">Telegono:</label>
-                        <input type="text" id="Telefono" name="Telefono">
+                        <label for="telefono">Telegono:</label>
+                        <input type="text" id="telefono" name="telefono">
+                    </div>
+                    <div class="form-group">
+                        <label for="dia_de_visita">Día de Visita:</label>
+                        <input type="text" id="dia_de_visita" name="dia_de_visita">
+                        <!-- <select type="text" id="dia_de_visita" name="dia_de_visita">
+                           <option value="lunes">Lunes</option>
+                           <option value="lunes">Martes</option>
+                           <option value="lunes">Miercoles</option>
+                           <option value="lunes">Jueves</option>
+                           <option value="lunes">Viernes</option>
+                           <option value="lunes">Sabado</option>
+                           <option value="lunes">Domingo</option>
+                        </select> -->
+                    </div>
+                    <div class="form-group">
+                        <label for="dia_de_entrega">Dia de Entrega:</label>
+                        <select type="text" id="dia_de_entrega" name="dia_de_entrega">
+                            <option value="lunes">Lunes</option>
+                            <option value="lunes">Martes</option>
+                            <option value="lunes">Miercoles</option>
+                            <option value="lunes">Jueves</option>
+                            <option value="lunes">Viernes</option>
+                            <option value="lunes">Sabado</option>
+                            <option value="lunes">Domingo</option>
+                         </select>
                     </div>
             
                     </div>
@@ -116,7 +172,7 @@
             
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-default">Guardar cambios</button>
+                <button type="submit" class="btn btn-default">Guardar cambios</button>
             </div>
     </div>
 </div >
