--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
@@ -82,7 +82,7 @@
                                 <td>{{d.email}}</td>
                                 <td>{{d.direccion}}</td>
                                 <td>{{d.telefono}}</td>
-                               
+                                <td><a href="{{url_for('deleteCliente', id_cliente=d.id_cliente)}}" class="btn btn-danger btn-sm">Eliminar</a></td>
                             </tr>
                         {% endfor %}
                     </tbody>
