--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/compras.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/compras.html
@@ -51,7 +51,7 @@
           
         <div class="content d-flex flex-column " >
             <!-- Contenido principal -->
-            <h3>Productos</h3>     
+            <h3>Compras</h3>     
                 <div class="horizontal-bar my-4 d-flex py-2 justify-content-end " >
                     <img src="/static/images/devolucion.png" alt="devolucion" class="icon" onclick="openModalDevolucion()">
                     <img src="/static/images/agregar.png" alt="agregar" class="icon" onclick="openModal()">
@@ -82,7 +82,7 @@
                                 <td>{{d.cantidad}}</td>
                                 <td>{{d.valor_unitario}}</td>
                                 <td>{{d.valor_total}}</td>
-                     
+                                <td><a href="{{url_for('deleteCompra', id_compra=d.id_venta)}}" class="btn btn-danger btn-sm">Eliminar</a></td>
                             </tr>
                         {% endfor %}
                     </tbody>
