--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/proveedores.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/proveedores.html
@@ -87,7 +87,7 @@
                                 <td>{{d.telefono}}</td>
                                 <td>{{d.dia_de_visita}}</td>
                                 <td>{{d.dia_de_entrega}}</td>
-                               
+                                <td><a href="{{url_for('deleteProveedor', id_proveedor=d.id_proveedor)}}" class="btn btn-danger btn-sm">Eliminar</a></td>
                             </tr>
                         {% endfor %}
                     </tbody>
@@ -136,13 +136,12 @@
                         <input type="text" id="email" name="email">
                     </div>
                     <div class="form-group">
-                        <label for="telefono">Telegono:</label>
+                        <label for="telefono">Telefono:</label>
                         <input type="text" id="telefono" name="telefono">
                     </div>
                     <div class="form-group">
-                        <label for="dia_de_visita">Día de Visita:</label>
-                        <input type="text" id="dia_de_visita" name="dia_de_visita">
-                        <!-- <select type="text" id="dia_de_visita" name="dia_de_visita">
+                        <label for="dia_de_visita">Día de Visita:</label>    
+                         <select type="text" id="dia_de_visita" name="dia_de_visita">
                            <option value="lunes">Lunes</option>
                            <option value="lunes">Martes</option>
                            <option value="lunes">Miercoles</option>
@@ -150,7 +149,7 @@
                            <option value="lunes">Viernes</option>
                            <option value="lunes">Sabado</option>
                            <option value="lunes">Domingo</option>
-                        </select> -->
+                        </select>
                     </div>
                     <div class="form-group">
                         <label for="dia_de_entrega">Dia de Entrega:</label>
