--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/usuarios.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/usuarios.html
@@ -84,6 +84,7 @@
                                 <td>{{d.usuario}}</td>
                                 <td>{{d.contrasenia}}</td>
                                 <td>{{d.tipo_usuario}}</td>
+                                <td><a href="{{url_for('deleteUsuarios', nombre=d.nombre)}}" class="btn btn-danger btn-sm">Eliminar</a></td>
                                 </tr>
                         {% endfor %}
                     </tbody>
