--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
@@ -54,71 +54,68 @@
             <!-- Contenido principal -->
             <h3>Productos</h3>     
                 <div class="horizontal-bar my-4 d-flex py-2 justify-content-end " >
-                    <img src="/static/images/devolucion.png" alt="devolucion" class="icon" onclick="openModalDevolucion()">
                     <img src="/static/images/agregar.png" alt="agregar" class="icon" onclick="openModal()">
-                    <img src="/static/images/editar.png" alt="Editar" class="icon" onclick="openModal2()">
-                    <img src="/static/images/Eliminar.png" alt="Eliminar" class="icon">
                     <input type="text" id="search-input" placeholder="Buscar...">
                 </div>
                 
                   <!-- Ventana modal agregar productos -->
-        <div id="myModal" class="modal">
-            <div class="modal-content">
-                <span class="close" onclick="closeModal()">×</span>
-                <form action="/guardar" id="product_form" method="post" >
-                    <div class="modal-header">
-                        <h2>Agregar Producto</h2>  
+                  <div id="myModal" class="modal">
+                    <div class="modal-content">
+                        <span class="close" onclick="closeModal()">×</span>
+                        <form action="/guardar" id="product_form" method="post" >
+                            <div class="modal-header">
+                                <h2>Agregar Producto</h2>  
+                            </div>
+                            <div class="modal-body">
+                                <div class="caja1">
+                                    <div class="form-group">
+                                        <label for="id_producto">Id Producto: </label>
+                                        <input type="text" id="id_producto" name="id_producto">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="codigo">Codigo: </label>
+                                        <input type="text" id="codigo" name="codigo">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="descripcion">Descripcion: </label>
+                                        <input type="text" id="descripcion" name="descripcion">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="categoria">Categoria: </label>
+                                        <input type="text" id="categoria" name="categoria">
+                                    </div>
+                                    
+                                </div>
+                                <div class="caja1">
+                                    <div class="form-group">
+                                        <label for="nombre_proveedor">Nombre Proveedor:</label>
+                                        <input type="text" id="nombre_proveedor" name="nombre_proveedor">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="valor_unitario">Valor unitario:</label>
+                                        <input type="text" id="valor_unitario" name="valor_unitario">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="unidad_medida">Unidad de medida: </label>
+                                        <input type="text" id="unidad_medida" name="unidad_medida">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" onclick="closeModal()">Cancelar</button>
+                                <button type="submit" class="btn btn-default">Guardar cambios</button>
+                            </div>
+                        </form>
                     </div>
-                    <div class="modal-body">
-                        <div class="caja1">
-                            <div class="form-group">
-                                    <label for="id_producto">Id Producto: </label>
-                                <input type="text" id="id_producto" name="id_producto">
-                            </div>
-                            <div class="form-group">
-                                <label for="codigo">Codigo: </label>
-                                <input type="text" id="codigo" name="codigo">
-                            </div>
-                            <div class="form-group">
-                                <label for="descripcion">Descripcion: </label>
-                                <input type="text" id="descripcion" name="descripcion">
-                            </div>
-                            <div class="form-group">
-                                <label for="valor_unitario">Categoria: </label>
-                                <input type="text" id="categoria" name="categoria">
-                            </div>
-                            
-                        </div>
-                        <div class="caja1">
-                            <div class="form-group">
-                                <label for="valor_unitario">Proveedor </label>
-                                <input type="text" id="proveedor" name="proveedor">
-                            </div>
-                            <div class="form-group">
-                                <label for="medio_pago">Valor unitario:</label>
-                                <input type="text" id="valorUnitario" name="valor_unitario">
-                            </div>
-                            <div class="form-group">
-                                <label for="medio_pago">Unidad de medida: </label>
-                                <input type="text" id="unidadMedida" name="unidad_medida">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" onclick="closeModal()">Cancelar</button>
-                        <button type="submit" class="btn btn-default">Guardar cambios</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-
+                </div>
+                
                     <table class="table table-bordered">
                         <thead>
                             <th scope="col">Id_Producto</th> 
                             <th scope="col">Codigo</th>
                             <th scope="col">Descripcion</th> 
                             <th scope="col">Categoria</th> 
-                            <th scope="col">Proveedor</th> 
+                            <th scope="col">nombre_proveedorr</th> 
                             <th scope="col">Unidad_medida</th> 
                             <th scope="col">Valor_unitario</th> 
                             <th scope="col" colspan="2">Acciones</th> 
@@ -131,7 +128,7 @@
                                 <td>{{d.codigo}}</td>
                                 <td>{{d.descripcion}}</td>
                                 <td>{{d.categoria}}</td>
-                                <td>{{d.proveedor}}</td>
+                                <td>{{d. nombre_proveedor}}</td>
                                 <td>{{d.unidad_medida}}</td>
                                 <td>{{d.valor_unitario}}</td>
                                 <td><button class="btn btn-primary btn-sm" id="btn-editar{{d.id_producto}}" data-bs-toggle="modal" data-bs-target="#modal{{d.id_producto}}">Editar</button></td>  
@@ -156,8 +153,8 @@
                                                 <input type="text" id="descripcion" name="descripcion" value="{{d.descripcion}}">
                                                 <label>Categoria: </label>
                                                 <input type="text" id="categoria" name="categoria" value="{{d.categoria}}">
-                                                <label>Proveedor </label>
-                                                <input type="text" id="proveedor" name="proveedor" value="{{d.proveedor}}">
+                                                <label> nombre_proveedor </label>
+                                                <input type="text" id=" nombre_proveedor" name=" nombre_proveedor" value="{{d.nombre_proveedor}}">
                                                 <label>Valor unitario:</label>
                                                 <input type="text" id="valorUnitario" name="valor_unitario" value="{{d.valor_unitario}}">
                                                 <label>Unidad de medida: </label>
